force-app/main/default/objects/BadgeUser__c/BadgeUser__c.object-meta.xml
<CustomObject>
    <label>BadgeUser</label>
    <nameField>
        <label>BadgeUser Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>BadgeUsers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>