force-app/main/default/objects/BadgeUser__c/fields/Badge__c.field-meta.xml
<CustomField>
    <fullName>Badge__c</fullName>
    <label>Badge</label>
    <referenceTo>Badge__c</referenceTo>
    <relationshipLabel>BadgeUsers</relationshipLabel>
    <relationshipName>BadgeUsers</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>